--- a/.ci_support/linux_64_dnnl_cpu_runtimetbbdnnl_experimental_ukernelno.yaml
+++ b/.ci_support/linux_64_dnnl_cpu_runtimetbbdnnl_experimental_ukernelno.yaml
@@ -17,16 +17,18 @@ cxx_compiler:
 cxx_compiler_version:
 - '13'
 dnnl_cpu_runtime:
-- omp
+- tbb
 dnnl_cpu_runtime_name:
-- cpu-omp
+- cpu-tbb
 dnnl_experimental_ukernel:
 - 'no'
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-alma-x86_64:8
 target_platform:
-- linux-ppc64le
+- linux-64
 tbb:
+- '2021'
+tbb_devel:
 - '2021'
 zip_keys:
 - - c_compiler_version
