--- a/.ci_support/osx_64_dnnl_cpu_runtimetbbdnnl_experimental_ukernelno.yaml
+++ b/.ci_support/osx_64_dnnl_cpu_runtimetbbdnnl_experimental_ukernelno.yaml
@@ -1,29 +1,35 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.13'
+MACOSX_SDK_VERSION:
+- '10.13'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '13'
+- '18'
 c_stdlib:
-- sysroot
+- macosx_deployment_target
 c_stdlib_version:
-- '2.17'
-cdt_name:
-- cos7
+- '10.13'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '13'
+- '18'
 dnnl_cpu_runtime:
-- threadpool
+- tbb
 dnnl_cpu_runtime_name:
-- cpu-threadpool
-docker_image:
-- quay.io/condaforge/linux-anvil-alma-x86_64:8
+- cpu-tbb
+dnnl_experimental_ukernel:
+- 'no'
+llvm_openmp:
+- '18'
+macos_machine:
+- x86_64-apple-darwin13.4.0
 target_platform:
-- linux-64
+- osx-64
 tbb:
 - '2021'
 tbb_devel:
@@ -31,7 +37,6 @@ tbb_devel:
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
-- - c_stdlib_version
-  - cdt_name
 - - dnnl_cpu_runtime_name
   - dnnl_cpu_runtime
+  - dnnl_experimental_ukernel
