--- a/.ci_support/osx_arm64_dnnl_cpu_runtimeomp.yaml
+++ b/.ci_support/osx_arm64_dnnl_cpu_runtimeomp.yaml
@@ -22,6 +22,8 @@ dnnl_cpu_runtime:
 - omp
 dnnl_cpu_runtime_name:
 - cpu-omp
+dnnl_experimental_ukernel:
+- 'no'
 llvm_openmp:
 - '18'
 macos_machine:
@@ -37,3 +39,4 @@ zip_keys:
   - cxx_compiler_version
 - - dnnl_cpu_runtime_name
   - dnnl_cpu_runtime
+  - dnnl_experimental_ukernel
