--- a/.ci_support/win_64_dnnl_cpu_runtimethreadpooldnnl_experimental_ukernelno.yaml
+++ b/.ci_support/win_64_dnnl_cpu_runtimethreadpooldnnl_experimental_ukernelno.yaml
@@ -12,6 +12,8 @@ dnnl_cpu_runtime:
 - threadpool
 dnnl_cpu_runtime_name:
 - cpu-threadpool
+dnnl_experimental_ukernel:
+- 'no'
 target_platform:
 - win-64
 tbb:
@@ -21,3 +23,4 @@ tbb_devel:
 zip_keys:
 - - dnnl_cpu_runtime_name
   - dnnl_cpu_runtime
+  - dnnl_experimental_ukernel
